--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,3 +8,34 @@ body {
   color: white;
   font-family : monospace;
 }
+
+.recipe-item {
+  display : flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  padding: 5px;
+}
+
+.recipe-text {
+  display : inline-table;
+  text-align : left;
+  padding-right: 10px;
+  width: 400px;
+}
+
+.recipe-img {
+  display: inline-block;
+  right: 0;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border: 1px solid black;
+  border-radius: 2px;
+}
+
+.star {
+  cursor: pointer;
+  font-size: 20px;
+  margin-right: 15px;
+}
